--- a/targetconfig.json
+++ b/targetconfig.json
@@ -1,6 +1,6 @@
 {
-  packages: {
-    approvedEditorExtensionUrls: [
+  "packages": {
+    "approvedEditorExtensionUrls": [
       "https://dan4p.github.io/"
     ]
   }
